Fix spacing, slightly "tab over" the results

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -25,5 +25,10 @@ body {
     background-color: #eee !important;
 }
 
+.child-row li {
+    margin-bottom: 10px;
+    padding-left: 10px;
+}
+
 .ui-match { background: yellow; }
 .ui-gray {color: gray;}
